dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:
    app: nginx-app
  ports:
  - name: web-http
    protocol: TCP
    port: 80
    targetPort: http-web-svc
