dev/vs.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dace-s
  # namespace: dace
spec:
  hosts:      
    - "*"
  gateways:
    - dace-gateway
  http:
    - match:
      - uri :
          prefix: "/v1"
      rewrite:
          uri: /
      route:
      - destination:
          host: dace-s
          subset: v1
